# text2cmd

./: README.md  pyproject.toml
src/text2cmd/: main.py
src/text2cmd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
